src/main/java/com/example/jallowbooks/errors/BadRequest.java
package com.example.jallowbooks.errors;

public class BadRequest extends RuntimeException  {
    public BadRequest(String message) {
        super(message);
    }
}
